# kscope

kscope/: .cproject  .project  INSTALL  kscope.pro
kscope/app/: actions.cpp  actions.h  addfilesdialog.cpp  addfilesdialog.h  addfilesdialog.ui  app.pro  application.cpp  application.h  buildprogress.h  editor.cpp  editor.h  editorconfigdialog.cpp  editorconfigdialog.h  editorcontainer.cpp  editorcontainer.h  fileiothread.h  findtextdialog.cpp  findtextdialog.h  findtextdialog.ui  ide.qrc  locationhistory.h  main.cpp  mainwindow.cpp  mainwindow.h  projectdialog.cpp  projectdialog.h  projectdialog.ui  projectfilesdialog.cpp  projectfilesdialog.h  projectmanager.cpp  projectmanager.h  querydialog.cpp  querydialog.h  querydialog.ui  queryresultdialog.cpp  queryresultdialog.h  queryresultdialog.ui  queryresultdock.cpp  queryresultdock.h  queryview.h  (+5 more)
kscope/core/: codebase.h  codebasemodel.cpp  codebasemodel.h  core.pro  engine.h  exception.h  filefilter.h  filescanner.cpp  filescanner.h  globals.h  locationlistmodel.cpp  locationlistmodel.h  locationmodel.cpp  locationmodel.h  locationtreemodel.cpp  locationtreemodel.h  parser.h  process.cpp  process.h  progressbar.cpp  progressbar.h  progressbar.ui  progressdialog.h  project.h  projectconfig.h  queryview.cpp  queryview.h  statemachine.h  treeitem.h
kscope/cscope/: configwidget.cpp  configwidget.h  crossref.cpp  crossref.h  cscope.cpp  cscope.h  cscope.pro  ctags.cpp  ctags.h  files.cpp  files.h  managedproject.cpp  managedproject.h
kscope/tags/V_1_9_0/: config
kscope/tags/V_1_9_0/app/: actions.cpp  application.h  editorcontainer.cpp  fileiothread.h  findtextdialog.h  locationhistory.h  projectdialog.h  querydialog.cpp  queryresultdock.cpp  session.h  stackwidget.h  version.h
kscope/tags/V_1_9_0/core/: core.pro  locationtreemodel.h  queryview.cpp  treeitem.h
kscope/tags/V_1_9_0/cscope/: crossref.cpp
kscope/trunk/app/: addfilesdialog.cpp  editorconfigdialog.cpp  editorconfigdialog.h  stackwidget.cpp
kscope/trunk/core/: core.qrc  locationlistmodel.cpp  locationtreemodel.cpp  parser.h  progressbar.h  queryview.h  statemachine.h
kscope/trunk/cscope/: cscope.h  ctags.cpp  ctags.h  files.cpp
min-cscope/trunk/: AUTHORS  CMakeLists.txt  INSTALL  README  cscope.files
min-cscope/trunk/sort/: CMakeLists.txt  cache.c  config.h.in  extsort.c  file.c  internal.h  os_posix.c  os_win.c  page.c  sort.h  unsorted.txt
min-cscope/trunk/src/: CMakeLists.txt  alloc.c  build.c  build.h  command.c  config.h.in  constants.h  crossref.c  dir.c  display.c  edit.c  egrep.y  exec.c  find.c  global.h  help.c  indent.pro  input.c  invlib.c  invlib.h  main.c  mypopen.c  version.h  vp.h
tags/V_1_9_0/app/: app.pro  application.cpp  configenginesdialog.cpp  projectfilesdialog.cpp  projectmanager.cpp
tags/V_1_9_0/core/: filescanner.cpp  globals.h  locationlistmodel.h  locationmodel.h
tags/V_1_9_0/cscope/: cscope.pro  managedproject.h
tags/V_1_9_1/: ChangeLog  config
tags/V_1_9_1/app/: actions.h  editorconfigdialog.ui  editorcontainer.cpp  findtextdialog.cpp  locationhistory.h  queryview.h  session.cpp  stackwidget.h  version.h
tags/V_1_9_1/core/: locationlistmodel.cpp  locationtreemodel.cpp  project.h  queryview.h
tags/V_1_9_1/cscope/: crossref.cpp  cscope.cpp  cscope.pro  files.h
tags/V_1_9_2/app/: actions.cpp  mainwindow.cpp  projectdialog.cpp  projectmanager.h  version.h
tags/V_1_9_2/core/: codebasemodel.cpp  globals.h  locationmodel.cpp  treeitem.h
tags/V_1_9_2/cscope/: cscope.cpp  cscope.pro  managedproject.h
tags/V_1_9_2/editor/: config.cpp  configdialog.cpp  configdialog.h  editor.cpp  editor.h  lexerstylemodel.cpp
tags/V_1_9_3/app/: actions.cpp
tags/V_1_9_3/core/: project.h
tags/V_1_9_3/editor/: actions.cpp
tags/V_1_9_4/app/: projectdialog.h  session.h
tags/V_1_9_4/core/: locationmodel.cpp  project.h
tags/V_1_9_4/editor/: actions.h
trunk/: ChangeLog  config  kscope.pro
trunk/app/: actions.cpp  actions.h  addfilesdialog.cpp  app.pro  application.cpp  buildprogress.h  configenginesdialog.cpp  editor.cpp  editor.h  editorcontainer.cpp  editorcontainer.h  locationhistory.h  mainwindow.cpp  mainwindow.h  openprojectdialog.cpp  openprojectdialog.h  openprojectdialog.ui  projectdialog.ui  projectmanager.cpp  projectmanager.h  querydialog.cpp  querydialog.h  querydialog.ui  queryresultdock.cpp  queryresultdock.h  session.cpp  session.h  settings.cpp  stackpage.ui  stackwidget.cpp  strings.h  version.h
trunk/core/: core.pro  globals.h  locationlistmodel.cpp  locationlistmodel.h  locationmodel.cpp  locationmodel.h  locationtreemodel.cpp  locationtreemodel.h  locationview.cpp  locationview.h  progressbar.cpp  queryview.cpp  queryview.h  textfilterdialog.cpp  textfilterdialog.h  textfilterdialog.ui
trunk/cscope/: crossref.cpp  cscope.cpp  cscope.h  cscope.pro  ctags.h  grep.cpp  grep.h  managedproject.cpp  managedproject.h
trunk/editor/: actions.cpp  actions.h  config.cpp  config.h  configdialog.cpp  configdialog.h  configdialog.ui  editor.cpp  editor.h  editor.pro  lexerstylemodel.cpp  lexerstylemodel.h  lexerstyleview.cpp  lexerstyleview.h  vimode.cpp  vimode.h  viscintilla.cpp  viscintilla.h
trunk/icons/: icons.pro
